--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>HBNB</title>
-</head>
-<body>
-    <h1>States</h1>
-    <ul>
-        {% for state in states %}
-            <li>{{ state.id }}: <b>{{ state.name }}</b></li>
-        {% endfor %}
-    </ul>
-</body>
-</html>
+<HTML lang="en">
+  <HEAD>
+    <TITLE>HBNB</TITLE>
+  </HEAD>
+  <BODY>
+    <H1>{{Table}}</H1>
+    <UL>
+      {%for id, name in items | dictsort(false, 'value') %}
+      <LI>{{ id }}: <B>{{ name }}</B></LI>
+      {% endfor %}
+    </UL>
+  </BODY>
+</HTML>
